Corrected OOO issues
This cookbook looks a bit more like RCB due to some difficult to solve
OOO issues.

1. Needed to duplicate the cinder.conf template in each service needing it, due
   to the following reasons:
   a. Having a notifies in common.rb to restart services that were not defined
      yet (but in later recipes) broke the recipe.
   b. Having notifies in common.rb for services that were not installed breaks
      things.
   Due to this very diffuclt issue to solve, felt it was okay to duplicate the
   template rendering.

2. Need to lookup the database password from a mysql server query, like we do
   elsewhere.  Have not tackled this yet.  Hardcoded to see if service would
   finally install.

3. Reformatted a few things to match our other openstack cookbooks.

4. Found a few bugs with endpoints needing '.to_s', or missing @ reference
   in template.

--- a/templates/default/api-paste.ini.erb
+++ b/templates/default/api-paste.ini.erb
@@ -52,7 +52,7 @@ paste.filter_factory = cinder.api.middleware.auth:CinderKeystoneContext.factory
 paste.filter_factory = keystoneclient.middleware.auth_token:filter_factory
 service_host = <%= @identity_endpoint.host %>
 service_port = <%= @identity_endpoint.port %>
-service_protocol = <%= identity_endpoint.scheme %>
+service_protocol = <%= @identity_endpoint.scheme %>
 auth_host = <%= @identity_admin_endpoint.host %>
 auth_port = <%= @identity_admin_endpoint.port %>
 auth_protocol = <%= @identity_admin_endpoint.scheme %>
