Fixes from marathon chef-client debug session
* Fixes hard-coded db password for Cinder with lookup
  of the cinder_db_chef_role attribute
* Fixes typo of glance_host and glance_port in config template
* Fixes incorrect keystoneclient.middleware reference in api-paste
  template
* Removes recipes/common.rb, as it was pointless now that the
  config template processing had to be moved into each service recipe
* Removes the recipes/setup.rb, as it was all for the API service,
  so moved the keystone_register calls directly into the api.rb recipe

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -71,10 +71,10 @@ sql_connection=<%= @sql_connection %>
 my_ip=<%= node["ipaddress"] %>
 #### (StrOpt) ip address of this host
 
-glance_host=<%= @glance_api_host %>
+glance_host=<%= @glance_host %>
 #### (StrOpt) default glance hostname or ip
 
-glance_port=<%= @glance_service_port %>
+glance_port=<%= @glance_port %>
 #### (IntOpt) default glance port
 
 # glance_api_servers=$glance_host:$glance_port
