--- a/templates/default/api-paste.ini.erb
+++ b/templates/default/api-paste.ini.erb
@@ -39,7 +39,10 @@ paste.app_factory = cinder.api.openstack.volume.versions:Versions.factory
 paste.filter_factory = cinder.api.auth:CinderKeystoneContext.factory
 
 [filter:authtoken]
-paste.filter_factory = keystoneclient.middleware.auth_token:filter_factory
+# This needs to change to keystoneclient.middleware.auth_token:filter_factory
+# when keystoneclient packages are updated (which contain the middleware, not
+# the Keystone server package...)
+paste.filter_factory = keystone.middleware.auth_token:filter_factory
 service_host = <%= @identity_endpoint.host %>
 service_port = <%= @identity_endpoint.port %>
 service_protocol = <%= @identity_endpoint.scheme %>
