Set state_path and a few others to not rely on defaults
I believe state_path was causing lvm to create volumes in the worng dir.

2012-12-13 00:30:54 DEBUG cinder.volume.manager [req-64dbc153-ece0-43b5-b5d3-239c438f892d cd5e66fdaffb46b98ec38033b3568ad7 b207ef4975d140da8f1afee98cffcde4] volume volume-58299
55a-c4f5-4965-a154-86ecc734ca60: creating export create_volume /usr/lib/python2.7/dist-packages/cinder/volume/manager.py:155
2012-12-13 00:30:54 31573 ERROR cinder.openstack.common.rpc.amqp [-] Exception during message handling
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp Traceback (most recent call last):
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp   File "/usr/lib/python2.7/dist-packages/cinder/openstack/common/rpc/amqp.py", line 276, in _process_data
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp     rval = self.proxy.dispatch(ctxt, version, method, **args)
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp   File "/usr/lib/python2.7/dist-packages/cinder/openstack/common/rpc/dispatcher.py", line 145, in dispatch
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp     return getattr(proxyobj, method)(ctxt, **kwargs)
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp   File "/usr/lib/python2.7/dist-packages/cinder/volume/manager.py", line 163, in create_volume
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp     volume_ref['id'], {'status': 'error'})
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp   File "/usr/lib/python2.7/contextlib.py", line 24, in __exit__
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp     self.gen.next()
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp   File "/usr/lib/python2.7/dist-packages/cinder/volume/manager.py", line 156, in create_volume
2012-12-13 00:30:54 31573 TRACE cinder.openstack.common.rpc.amqp     model_update = self.driver.create_export(context, volume_ref)
2012

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -66,6 +66,7 @@ sql_connection=<%= @sql_connection %>
 #### (StrOpt) Directory where cinder binaries are installed
 
 # state_path=$pybasedir
+state_path=<%= node["cinder"]["volume"]["state_path"] %>
 #### (StrOpt) Top-level directory for maintaining cinder's state
 
 my_ip=<%= node["ipaddress"] %>
@@ -515,6 +516,7 @@ rabbit_port=<%= @rabbit_port %>
 ######## defined in cinder.volume.driver ########
 
 # volume_group=cinder-volumes
+volume_group=<%= node["cinder"]["volume"]["volume_group"] %>
 #### (StrOpt) Name for the VG that will contain exported volumes
 
 # num_shell_tries=3
