--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -573,7 +573,7 @@ volume_driver=<%= node["cinder"]["volume"]["volume_driver"] %>
 
 ######## defined in cinder.volume.netapp ########
 
-<% if node["cinder"]["netapp"]["enabled"] = true %>
+<% if node["cinder"]["netapp"]["enabled"] %>
 netapp_wsdl_url=http://<%= node["cinder"]["netapp"]["dfm_hostname"] %>:<%= node["cinder"]["netapp"]["dfm_port"] %>/dfm.wsdl
 #### (StrOpt) URL of the WSDL file for the DFM server
 
@@ -590,33 +590,6 @@ netapp_server_port=<%= node["cinder"]["netapp"]["dfm_port"] %>
 #### (IntOpt) Port number for the DFM server
 
 netapp_storage_service=<%= node["cinder"]["netapp"]["storage_service"] %>
-#### (StrOpt) Storage service to use for provisioning (when
-####          volume_type=None)
-
-# netapp_storage_service_prefix=<None>
-#### (StrOpt) Prefix of storage service name to use for provisioning
-####          (volume_type name will be appended)
-
-# netapp_vfiler=<None>
-#### (StrOpt) Vfiler to use for provisioning
-<% else %>
-
-# netapp_wsdl_url=<None>
-#### (StrOpt) URL of the WSDL file for the DFM server
-
-# netapp_login=<None>
-#### (StrOpt) User name for the DFM server
-
-# netapp_password=<None>
-#### (StrOpt) Password for the DFM server
-
-# netapp_server_hostname=<None>
-#### (StrOpt) Hostname for the DFM server
-
-# netapp_server_port=8088
-#### (IntOpt) Port number for the DFM server
-
-# netapp_storage_service=<None>
 #### (StrOpt) Storage service to use for provisioning (when
 ####          volume_type=None)
 
