--- a/templates/default/api-paste.ini.erb
+++ b/templates/default/api-paste.ini.erb
@@ -45,10 +45,9 @@ paste.filter_factory = cinder.api.auth:CinderKeystoneContext.factory
 # when keystoneclient packages are updated (which contain the middleware, not
 # the Keystone server package...)
 paste.filter_factory = keystone.middleware.auth_token:filter_factory
-auth_host = <%= @raw_auth_uri.host %>
-auth_port = <%= @raw_auth_uri.port %>
-auth_protocol = <%= @raw_auth_uri.scheme %>
-auth_uri = <%= @auth_uri %>
+auth_host = <%= @identity_admin_endpoint.host %>
+auth_port = <%= @identity_admin_endpoint.port %>
+auth_protocol = <%= @identity_admin_endpoint.scheme %>
 admin_tenant_name = <%= node["cinder"]["service_tenant_name"] %>
 admin_user = <%= node["cinder"]["service_user"] %>
 admin_password = <%= @service_pass %>
