--- a/templates/default/api-paste.ini.erb
+++ b/templates/default/api-paste.ini.erb
@@ -51,6 +51,6 @@ auth_protocol = <%= @identity_admin_endpoint.scheme %>
 admin_tenant_name = <%= node["cinder"]["service_tenant_name"] %>
 admin_user = <%= node["cinder"]["service_user"] %>
 admin_password = <%= @service_pass %>
-<% if node["openstack"]["signing"]["pki"] -%>
+<% if node["openstack"]["auth"]["strategy"] == "pki" -%>
 signing_dir = <%= node["cinder"]["pki"]["signing_dir"] %>
 <% end -%>
