rabbit_host is rabbit_ipaddress variable in nova

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -370,7 +370,7 @@ db_backend=sqlalchemy
 # kombu_ssl_ca_certs=
 #### (StrOpt) SSL certification authority file (valid only if SSL enabled)
 
-rabbit_host=<%= @rabbit_host %>
+rabbit_host=<%= @rabbit_ipaddress %>
 #### (StrOpt) The RabbitMQ broker address where a single node is used
 
 rabbit_port=<%= @rabbit_port %>
