added parameter for lockutils

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -10,6 +10,9 @@ debug=<%= node["cinder"]["debug"] %>
 verbose=<%= node["cinder"]["verbose"] %>
 #### (BoolOpt) Print more verbose output
 
+# lock_path
+lock_path=<%= node["cinder"]["lock_path"] %>
+
 # log_config=<None>
 #### (StrOpt) If this option is specified, the logging configuration file
 ####          specified is used and overrides any other logging options
