--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -12,6 +12,7 @@ verbose=<%= node["cinder"]["verbose"] %>
 
 # lock_path
 lock_path=<%= node["cinder"]["lock_path"] %>
+notification_driver=cinder.openstack.common.notifier.rabbit_notifier
 
 # log_config=<None>
 #### (StrOpt) If this option is specified, the logging configuration file
