--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -536,7 +536,7 @@ volume_group=<%= node["cinder"]["volume"]["volume_group"] %>
 
 # iscsi_port=3260
 #### (IntOpt) The port that the iSCSI daemon is listening on
-
+<% if node["cinder"]["volume"]["volume_driver"] == 'cinder.volume.driver.RBDDriver' %>
 rbd_pool=<%= node["cinder"]["rbd_pool"] %>
 #### (StrOpt) the RADOS pool in which rbd volumes are stored
 
@@ -545,7 +545,7 @@ rbd_user=<%= node["cinder"]["rbd_user"] %>
 
 rbd_secret_uuid=<%= node["cinder"]["rbd_secret_uuid"] %>
 #### (StrOpt) the libvirt uuid of the secret for the rbd_uservolumes
-
+<% end %>
 # volume_tmp_dir=<None>
 #### (StrOpt) where to store temporary image files if the volume driver
 ####          does not write them directly to the volume
