forgot the custom banner

--- a/templates/default/policy.json.erb
+++ b/templates/default/policy.json.erb
@@ -1,3 +1,4 @@
+<%= node["cinder"]["custom_template_banner"] %>
 {
     "context_is_admin": [<%= node["cinder"]["policy"]["context_is_admin"] %>],
     "admin_or_owner":  [<%= node["cinder"]["policy"]["admin_or_owner"] %>],
