--- a/templates/default/targets.conf.erb
+++ b/templates/default/targets.conf.erb
@@ -1,4 +1,4 @@
-<%= node["cinder"]["custom_template_banner"] %>
+<%= node["openstack-block-storage"]["custom_template_banner"] %>
 
 <% if %w{redhat centos fedora}.include?(node["platform"]) %>
 include /var/lib/cinder/volumes/*
