--- a/templates/default/api-paste.ini.erb
+++ b/templates/default/api-paste.ini.erb
@@ -5,9 +5,10 @@
 #############
 
 [composite:osapi_volume]
-use = call:cinder.api.openstack.urlmap:urlmap_factory
-/: osvolumeversions
+use = call:cinder.api:root_app_factory
+/: apiversions
 /v1: openstack_volume_api_v1
+/v2: openstack_volume_api_v2
 
 [composite:openstack_volume_api_v1]
 use = call:cinder.api.auth:pipeline_factory
@@ -15,36 +16,42 @@ noauth = faultwrap sizelimit noauth osapi_volume_app_v1
 keystone = faultwrap sizelimit authtoken keystonecontext osapi_volume_app_v1
 keystone_nolimit = faultwrap sizelimit authtoken keystonecontext osapi_volume_app_v1
 
+[composite:openstack_volume_api_v2]
+use = call:cinder.api.middleware.auth:pipeline_factory
+noauth = faultwrap sizelimit noauth apiv2
+keystone = faultwrap sizelimit authtoken keystonecontext apiv2
+keystone_nolimit = faultwrap sizelimit authtoken keystonecontext apiv2
+
 [filter:faultwrap]
-paste.filter_factory = cinder.api.openstack:FaultWrapper.factory
+paste.filter_factory = cinder.api.middleware.fault:FaultWrapper.factory
 
 [filter:noauth]
-paste.filter_factory = cinder.api.openstack.auth:NoAuthMiddleware.factory
+paste.filter_factory = cinder.api.middleware.auth:NoAuthMiddleware.factory
 
 [filter:sizelimit]
-paste.filter_factory = cinder.api.sizelimit:RequestBodySizeLimiter.factory
+paste.filter_factory = cinder.api.middleware.sizelimit:RequestBodySizeLimiter.factory
 
-[app:osapi_volume_app_v1]
-paste.app_factory = cinder.api.openstack.volume:APIRouter.factory
+[app:apiv1]
+paste.app_factory = cinder.api.v1.router:APIRouter.factory
 
-[pipeline:osvolumeversions]
+[app:apiv2]
+paste.app_factory = cinder.api.v2.router:APIRouter.factory
+
+pipeline:apiversions]
 pipeline = faultwrap osvolumeversionapp
 
 [app:osvolumeversionapp]
-paste.app_factory = cinder.api.openstack.volume.versions:Versions.factory
+paste.app_factory = cinder.api.versions:Versions.factory
 
 ##########
 # Shared #
 ##########
 
 [filter:keystonecontext]
-paste.filter_factory = cinder.api.auth:CinderKeystoneContext.factory
+paste.filter_factory = cinder.api.middleware.auth:CinderKeystoneContext.factory
 
 [filter:authtoken]
-# This needs to change to keystoneclient.middleware.auth_token:filter_factory
-# when keystoneclient packages are updated (which contain the middleware, not
-# the Keystone server package...)
-paste.filter_factory = keystone.middleware.auth_token:filter_factory
+paste.filter_factory = keystoneclient.middleware.auth_token:filter_factory
 auth_host = <%= @identity_admin_endpoint.host %>
 auth_port = <%= @identity_admin_endpoint.port %>
 auth_protocol = <%= @identity_admin_endpoint.scheme %>
