Only lookup volume service passwords when necessary
The volume service passwords should be looked up depending on
the type of driver used.  As I understand it the grizzly netapp
driver no longer requires dfm.  However, without testing this,
would like to keep the existing configuraton.  We will be testing
this in our lab over the next few days, and will send a new patch
based on our findings.

Change-Id: I1cf0b6e292eec71788d0b79dbf270a1d17bbfa1e

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -536,7 +536,7 @@ volume_group=<%= node["openstack"]["block-storage"]["volume"]["volume_group"] %>
 
 # iscsi_port=3260
 #### (IntOpt) The port that the iSCSI daemon is listening on
-<% if node["openstack"]["block-storage"]["volume"]["volume_driver"] == 'cinder.volume.driver.RBDDriver' %>
+<% if node["openstack"]["block-storage"]["volume"]["volume_driver"] == "cinder.volume.driver.RBDDriver" %>
 rbd_pool=<%= node["openstack"]["block-storage"]["rbd_pool"] %>
 #### (StrOpt) the RADOS pool in which rbd volumes are stored
 
